--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "test-trillium-aws-lambda"
+name = "sessile-aws-lambda"
 version = "0.1.0"
 edition = "2021"
 
@@ -16,3 +16,6 @@ serde_json = "1.0.74"
 tokio = { version = "1.15.0", features = ["rt", "net", "rt-multi-thread"], package = "tokio" }
 trillium = "0.2.2"
 trillium-http = "0.2.7"
+
+[dev-dependencies]
+env_logger = "0.9.0"
